--- a/templates/index.html
+++ b/templates/index.html
@@ -39,10 +39,11 @@
         <li class="dropdown" onclick="this.classList.toggle('open')">
           <a href="#">Options ▼</a>
           <div class="dropdown-content">
-            <a href="/help">Help</a>
-            <a href="/logout">Logout</a>
+            <a href="/share">🔗 Share My Location</a>
+            <a href="/help">❓ Help</a>
+            <a href="/logout">🚪 Logout</a>
             <a href="#" class="delete-link" onclick="openDeleteModal()"
-              >Delete Account</a
+              >🗑️ Delete Account</a
             >
           </div>
         </li>
